Details
-
Bug
-
Status: Closed (View Workflow)
-
Major
-
Resolution: Fixed
-
10.0(EOL), 10.1(EOL), 10.2(EOL), 10.3(EOL), 10.4(EOL), 10.5(EOL), 10.6(EOL), 10.7(EOL), 10.8(EOL), 10.9(EOL), 10.10(EOL)
-
None
Description
main.kill_processlist-6619 w3 [ fail ]
|
Test ended at 2016-09-09 22:06:19
|
|
|
CURRENT_TEST: main.kill_processlist-6619
|
--- /home/buildbot/maria-slave/p8-rhel6-bintar-debug/build/mysql-test/r/kill_processlist-6619.result 2016-09-03 20:27:50.690045476 -0400
|
+++ /home/buildbot/maria-slave/p8-rhel6-bintar-debug/build/mysql-test/r/kill_processlist-6619.reject 2016-09-09 22:06:19.290045477 -0400
|
@@ -1,7 +1,7 @@
|
connect con1,localhost,root,,;
|
SHOW PROCESSLIST;
|
Id User Host db Command Time State Info Progress
|
-# root # test Sleep # # NULL 0.000
|
+# root # test Query # # select count(*) = 0 from information_schema.session_variables where variable_name = 'debug_sync' and 0.000
|
# root # test Query # # SHOW PROCESSLIST 0.000
|
SET DEBUG_SYNC='before_execute_sql_command SIGNAL ready WAIT_FOR go';
|
SHOW PROCESSLIST;
|
|
|
mysqltest: Result length mismatch
|
Attachments
Issue Links
- relates to
-
MDEV-7069 Fix buildbot failures in main server trees
-
- Closed
-